--- a/education-detail.html
+++ b/education-detail.html
@@ -35,7 +35,7 @@
 	<!--end::Theme mode setup on page load-->
 	<!--begin::Root-->
 	<div class="d-flex flex-column flex-root" id="kt_app_root">
-		<!--begin::Header Section-->
+		<!--begin::Header Sections-->
 		<div class="mb-0" id="home">
 			<!--begin::Wrapper-->
 			<div class="bgi-no-repeat bgi-size-contain bgi-position-x-center bgi-position-y-bottom landing-dark-bg">
