--- a/homepage-1.html
+++ b/homepage-1.html
@@ -341,7 +341,7 @@
 							data-tns-responsive="{1200: {items: 4}, 992: {items: 3}}">
 							<!--begin::Item-->
 							<div class="card border-gray-300 my-2 mx-5">
-								<img class="mw-100 w-100 mh-300px card-rounded-top" alt=""
+								<img class="mw-100 w-100 mh-300px card-rounded-top" alt="Course"
 									src="assets/media/course/course-1.svg" />
 								<div class="d-flex justify-content-between w-100 px-5 py-4">
 									<span class="badge badge-light-success h-20px">MESLEKİ EĞİTİMLER</span>
