--- a/education-detail.html
+++ b/education-detail.html
@@ -642,7 +642,126 @@
 							<!--end::Tab 3 Section-->
 							<!--begin::Tab 4 Section-->
 							<div class="tab-pane fade" id="kt_tab_panel_4" role="tabpanel">
-								...
+								<h3 class="fw-bolder mt-10">Eğitim içeriği</h3>
+								<div class="row my-8">
+									<div class="col-lg-4">
+										<div class="rate-box bg-gray-100 rounded-1 text-center p-8">
+											<h1 class="fs-4x fw-bolder">4.8</h1>
+											<div class="flex gap-2 mt-3">
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+											</div>
+											<p class="text-gray-600 mt-4 fs-4">Kurs Puanı</p>
+										</div>
+									</div>
+									<div class="col-lg-8">
+										<div class="rate-box rounded-1 bg-gray-100">
+											<div class="rate-line flex">
+												<label>
+													<i class="bi bi-star-fill fs-4 text-warning"></i> 5.0
+													<progress max="100" value="50">10%</progress>
+													50
+												</label>
+												<label> <i class="bi bi-star-fill fs-4 text-warning"></i> 4.0
+													<progress max="100" value="30">40%</progress>
+													30
+												</label>
+												<label> <i class="bi bi-star-fill fs-4 text-warning"></i> 4.0
+													<progress max="100" value="10">80%</progress>
+													10
+												</label>
+												<label> <i class="bi bi-star-fill fs-4 text-warning"></i> 2.0
+													<progress max="100" value="6">100%</progress>
+													6
+												</label>
+												<label class="mb-0">
+													<i class="bi bi-star-fill fs-4 text-warning"></i> 1.0
+													<progress max="100" value="4">100%</progress>
+													4
+												</label>
+											</div>
+										</div>
+									</div>
+								</div>
+								<h3 class="fw-bolder my-10">Öğrenci Yorumları</h3>
+								<div class="comment-wrapper">
+									<div class="d-flex gap-5">
+										<div style="background-color: #E74238; min-width:60px"
+											class="rounded-circle h-60px d-flex">
+											<span class="m-auto fs-2x text-white">G</span>
+										</div>
+										<div>
+											<h3 class="mt-2 fw-bold fs-4">Gonca YILDIZ</h3>
+											<div class="d-flex gap-2 mt-3">
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												- 1 ay önce
+											</div>
+											<p class="text-gray-600 fs-5 mt-3">Gerçekten özenli hazırlanmış, ellerinize
+												sağlık. Eğitimlerin özetini PDF
+												olarak paylaşmanız ayrıca güzel. Hazır promtlar, alınan eğitimin
+												uygulamasında fayda sağlıyor. Pazarlama ilgi alanım olduğu için
+												yaptığınız örnekler çok iyi. Umarım sıklıkla eğitimi günceller daha de
+												geliştirirsiniz.</p>
+
+											<div class="d-flex gap-4 align-items-center">
+												<b>Faydalı buldunuz mu?</b>
+												<button class="btn btn-sm btn-primary text-white fw-bolder">
+													<i class="ki-solid ki-like"></i>Evet
+												</button>
+												<button class="btn btn-sm btn-secondary text-black fw-bolder">
+													<i class="ki-solid ki-dislike text-black"></i>Hayır
+												</button>
+											</div>
+										</div>
+									</div>
+									<div class="separator my-8"></div>
+								</div>
+								<div class="comment-wrapper">
+									<div class="d-flex gap-5">
+										<div style="background-color: #E74238; min-width:60px"
+											class="rounded-circle h-60px d-flex">
+											<span class="m-auto fs-2x text-white">Y</span>
+										</div>
+										<div>
+											<h3 class="mt-2 fw-bold fs-4">Yonca YILDIZ</h3>
+											<div class="d-flex gap-2 mt-3">
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												<i class="bi bi-star-fill fs-4 text-warning"></i>
+												- 2 ay önce
+											</div>
+											<p class="text-gray-600 fs-5 mt-3">Gerçekten özenli hazırlanmış, ellerinize
+												sağlık. Eğitimlerin özetini PDF
+												olarak paylaşmanız ayrıca güzel. Hazır promtlar, alınan eğitimin
+												uygulamasında fayda sağlıyor. Pazarlama ilgi alanım olduğu için
+												yaptığınız örnekler çok iyi. Umarım sıklıkla eğitimi günceller daha de
+												geliştirirsiniz.</p>
+
+											<div class="d-flex gap-4 align-items-center">
+												<b>Faydalı buldunuz mu?</b>
+												<button class="btn btn-sm btn-primary text-white fw-bolder">
+													<i class="ki-solid ki-like"></i>Evet
+												</button>
+												<button class="btn btn-sm btn-secondary text-black fw-bolder">
+													<i class="ki-solid ki-dislike text-black"></i>Hayır
+												</button>
+											</div>
+										</div>
+									</div>
+									<div class="separator my-8"></div>
+								</div>
+								<div class="text-center fw-bolder fs-5 cursor-pointer">
+									<i class="ki-solid ki-down fs-4 text-black"></i> Tüm Yorumları Gör
+								</div>
 							</div>
 							<!--end::Tab 4 Section-->
 						</div>
