--- a/homepage-1.html
+++ b/homepage-1.html
@@ -715,6 +715,15 @@
 					<!--end::Col-->
 				</div>
 				<!--end::Row-->
+				<div class="flex-equal text-center mt-5">
+					<a href="authentication/layouts/corporate/sign-in.html"
+						class="btn btn-danger fw-bolder me-5 me-lg-3">
+						Hemen Başlayın
+					</a>
+					<a href="authentication/layouts/corporate/sign-in.html" class="btn btn-dark fw-bolder">
+						Tüm eğitimleri keşfedin
+					</a>
+				</div>
 			</div>
 			<!--end::Container-->
 		</div>
